# QuickAlarms

./: AlarmDelegate.qml  AlarmDialog.qml  AlarmModel.qml  CMakeLists.txt  CMakePresets.json  TumblerDelegate.qml  main.cpp  main.qml  qtquickcontrols2.conf
